[FEATURE] adds things to View2

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,5 @@
 <p>This is the partial for view 2.</p>
+<p> {{ View2Ctrl.test }} adad </p>
 <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
