--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="bower_components/bootstrap/dist/css/egen.css" rel="stylesheet">
+    <link href="egen.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
