[FEATURE] adds 3 chars with random data for now

--- a/app/index.html
+++ b/app/index.html
@@ -82,15 +82,24 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <!--vendor scripts -->
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/Chart.js/chart.min.js"></script>
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  
+  <!--custom scripts -->
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  
+  <!--custom directive -->
+  <script src="components/ngChart/chart.directive.js"></script>
+  <script src="components/ngChartOne/chartOne.directive.js"></script>
+  <script src="components/ngChartTwo/chartTwo.directive.js"></script>
+  
 </body>
 </html>
