--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,7 +1,18 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 vertical-center">
+              
+              <div class="row">
+                <ng-chart class="chart col-lg-10 col-lg-offset-1"></ng-chart>
+              </div>             
+              <div class="row">
+                <ng-chart-One class="chart col-lg-10 col-lg-offset-1"></ng-chart-One>
+              </div>
+              <div class="row">
+                <ng-chart-Two class="chart col-lg-10 col-lg-offset-1"></ng-chart-Two>
+              </div>                           
+                                         
 <script>$( document ).ready(function() {
 $(function () {
     $.ajax({
