[FEATURE] adds support for adding numbers to bar chart

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -13,7 +13,7 @@
                 <ng-chart-Two class="chart col-lg-10 col-lg-offset-1"></ng-chart-Two>
               </div>                           
                                          
-<script>$( document ).ready(function() {
+<!--<script>$( document ).ready(function() {
 $(function () {
     $.ajax({
         type: "POST",
@@ -51,7 +51,7 @@ url:"http://api.scb.se/OV0104/v1/doris/sv/ssd/START/SF/SF0101/ForaldraPenning",
     console.log(points, evt);
   };
 });*/
-});</script>
+});</script>-->
 
     <!-- Footer -->
     <footer>
