--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,16 @@
   <title>Svensk Jämställdhet</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="egen.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
+    <!-- Vendor styles -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
  <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css"> -->
@@ -40,7 +40,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right menu">
                     <li>
                         <a href="#/view1">START</a>
@@ -60,7 +60,7 @@
     <header class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1">
                     <div class="site-heading">
                         <img class="logo" src="logo.png">
                         <hr class="small">
@@ -84,9 +84,10 @@
   -->
   <!--vendor scripts -->
   <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/Chart.js/chart.min.js"></script>
+  <script src="bower_components/Chart.js/Chart.min.js"></script>
   <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   
   <!--custom scripts -->
   <script src="app.js"></script>
