text content added

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,5 +1,9 @@
     <!-- Main Content -->
+
     <div class="container">
+       <div class="row">
+    <span class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 vertical-center"><h3>Ett projekt om utvecklingen utav den svenska jämställdheten</h3></span>
+</div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 vertical-center">
               
