--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,7 +1,19 @@
-<p>This is the partial for view 2.</p>
-<p> {{ View2Ctrl.test }} adad </p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
 
+<div class="vertical-center"></div>
+<div class="col-lg-2 col-lg-offset-5">
+  <form id="contact_form" class="" >
+    <div class="row">
+      <label for="name">Name:</label><br />
+      <input id="name" class="input" name="name" type="text" value="" size="50" /><br />
+    </div>
+    <div class="row">
+      <label for="email">Email:</label><br />
+      <input id="email" class="input" name="email" type="text" value="" size="50" /><br />
+    </div>
+    <div class="row">
+      <label for="message">Meddelande:</label><br />
+      <textarea id="message" class="input" name="message" rows="7" cols="52"></textarea><br />
+    </div>
+    <input id="submit_button" type="submit" value="Send email" ng-click="submit()" />
+  </form>						
+</div>
