--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,5 @@
 
-<div class="vertical-center"></div>
+<div class="vertical-center">
 <div class="col-lg-2 col-lg-offset-5">
   <form id="contact_form" class="" >
     <div class="row">
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <label for="message">Meddelande:</label><br />
-      <textarea id="message" class="input" name="message" rows="7" cols="52"></textarea><br />
+      <textarea id="message" class="input" name="message" rows="7" cols="50"></textarea><br />
     </div>
     <input id="submit_button" type="submit" value="Send email" ng-click="submit()" />
   </form>						
