[FEATURE] last changes

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
                     <div class="site-heading">
                         <img class="logo" src="logo.png">
                         <hr class="small">
+                        <span class="col-lg-10 col-lg-offset-1"><h2>Ett projekt om utvecklingen utav den svenska jämställdheten</h2></span>
+
                     </div>
                 </div>
             </div>
